# streamlink-video-launcher

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: app.rs  history.rs  install.rs  main.rs  platform.rs  streamlink.rs  ytdlp.rs
