[package]
name = "streamlink-video-launcher"
version = "0.1.3"
edition = "2021"

[dependencies]
iced = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rfd = "0.17"
ureq = { version = "2", features = ["rustls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
